added body to log

--- a/src/main/java/com/jmelzer/webapp/ui/widgets/ActivityLogWidgetView.html
+++ b/src/main/java/com/jmelzer/webapp/ui/widgets/ActivityLogWidgetView.html
@@ -10,9 +10,12 @@
             <span wicket:id="logAction"/>
             <a wicket:id="issueLink"><span wicket:id="issueLinkLabel"/> </a>
             <br/>
-            <!--<span wicket:id="logBody"></span>-->
-            <span wicket:id="logDate"></span>
 
+
+            <div style="background-color: #e0ffff; margin-top: 5px">
+                <span wicket:id="logDetail"/>
+            </div>
+            <span style="margin-left: 30px" wicket:id="logDate"></span> ago
         </div>
     </ul>
 </wicket:panel>
