--- a/src/main/java/com/jmelzer/webapp/ui/widgets/ActivityLogWidgetView.html
+++ b/src/main/java/com/jmelzer/webapp/ui/widgets/ActivityLogWidgetView.html
@@ -2,7 +2,7 @@
 <html xmlns:wicket="http://wicket.apache.org/">
 <wicket:panel>
     <ul wicket:id="logs">
-        <div style="width: 100%; white-space:nowrap;">
+        <div style="width: 100%; ">
             <a wicket:id="userlink">
                 <img wicket:id="userimage" style="vertical-align:middle"/>
                 <span wicket:id="username"/>
@@ -12,7 +12,7 @@
             <br/>
 
 
-            <div style="background-color: #e0ffff; margin-top: 5px">
+            <div class="comments_body">
                 <span wicket:id="logDetail"/>
             </div>
             <span style="margin-left: 30px" wicket:id="logDate"></span> ago
